passwordGen/Sec files update

--- a/passwordSec.ipynb
+++ b/passwordSec.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\PC\\Desktop\\Projects\\Academics\\Thesis\\workspace\\myEnv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\PC\\Desktop\\Projects\\Academics\\Thesis\\workspaceThesis\\myEnv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "669640"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "[669640 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
        "92"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['U', '\\\\', '<', 'x', ']', '2', '4', '.', 'S', 'M', '8', '{', 'p', ')', '}', '-', 'H', '?', 'k', 'm', 'g', 'O', 'J', 'n', 'B', '\"', 'G', 'f', 'N', 'q', '`', '+', 'X', 'A', '9', '=', '!', '#', '|', 'l', 't', 'a', 'u', '7', 'r', 'I', ' ', 'L', 'K', 'E', 'W', 'F', 'z', 'j', '1', 'i', 'h', 'C', '~', 'c', 'e', 's', 'T', 'o', 'V', '5', '/', '(', '6', 'y', '@', '>', '[', 'Y', 'Q', '%', '3', 'Z', ';', 'd', '_', '$', 'b', 'P', '0', 'D', '*', 'w', '&', '^', 'v', 'R']\n"
+      "['R', '0', ']', 'n', 'y', '<', 'I', 'z', 'l', '$', 'S', ' ', '\\\\', 'o', '#', '{', 'Z', 'D', 'X', '[', 'G', '?', 'H', 'a', 'M', 'A', '+', '!', 'h', 'e', '4', '=', 'q', '*', '.', 'f', 'B', 'Y', ')', '~', 'O', 'r', 'd', '1', '|', 'W', 'J', 'V', 'E', '8', 'j', '3', 'L', '_', 'g', '5', '&', ';', 'T', '`', '>', '6', 'K', '%', 'k', '-', '(', 'x', 'P', 'u', '2', 'N', 'm', 'b', 'C', 'Q', 'p', '7', 'F', '@', '}', 'i', 's', '/', '^', 'c', 'v', 'U', '9', 'w', 't', '\"']\n"
      ]
     }
    ],
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
        " ...]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2474,7 @@
        "       'marken22a', 'fxx4pw4g'], dtype='<U30')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2494,7 @@
        "array(['1', '1', '1', ..., '1', '1', '1'], dtype='<U30')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2505,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2515,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2615,7 @@
        " '~': 91}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2667,14 +2667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\PC\\Desktop\\Projects\\Academics\\Thesis\\workspace\\myEnv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:525: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "c:\\Users\\PC\\Desktop\\Projects\\Academics\\Thesis\\workspaceThesis\\myEnv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:525: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2687,17 +2687,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<669278x73 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 5642755 stored elements in Compressed Sparse Row format>"
+       "<669284x73 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 5642809 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2718,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2727,7 +2727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2736,7 @@
        "(669278, 30)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,16 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y=np.expand_dims(y, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2756,7 @@
        "(669278,)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2776,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2791,7 +2782,7 @@
        "       [67, 85, 85, ...,  0,  0,  0]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2817,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2857,36 +2848,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=X[:20000,:]\n",
-    "y=y[:20000]"
+    "X=X[:200000,:]\n",
+    "y=y[:200000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000,)"
+       "(100000,)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2897,31 +2888,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# experiment with hyperparam optimization\n",
+    "# can use GridSearchCV to define model, param variations and scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# regularization\n",
     "C=1.0\n",
     "#SVM model\n",
-    "Svc_classifier = svm.SVC(kernel = 'rbf', gamma =\"auto\", C = C).fit(X_train, y_train)"
+    "Svc = svm.SVC(kernel = 'rbf', gamma =\"auto\", C = C).fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7885\n"
+      "0.82595\n"
      ]
     }
    ],
    "source": [
-    "print(Svc_classifier.score(X_test,y_test))"
+    "print(Svc.score(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tst = X_test[154].reshape(1, -1)\n",
+    "Z = Svc.predict(tst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1'], dtype='<U30')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z"
    ]
   },
   {
@@ -2932,37 +2963,49 @@
    "source": [
     "import pickle\n",
     "filename = 'svm_model.sav'\n",
-    "pickle.dump(Svc_classifier, open(filename, 'wb'))"
+    "pickle.dump(Svc, open(filename, 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tst = X_test[154].reshape(1, -1)\n",
-    "Z = Svc_classifier.predict(tst)"
+    "# regularization\n",
+    "C=1.0\n",
+    "#SVM model w/ fold cross validation\n",
+    "Svc_CV = svm.SVC(kernel = 'rbf', gamma =\"auto\", C = C)\n",
+    "scores = cross_val_score(Svc_CV, X, y, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1'], dtype='<U30')"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Z"
+    "print(Svc_CV.score(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filename = 'svm_model.sav'\n",
+    "pickle.dump(Svc, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#figure out below params to graph"
    ]
   },
   {
@@ -2983,7 +3026,7 @@
     }
    ],
    "source": [
-    "Z = Svc_classifier.predict(text[10001])\n",
+    "Z = Svc.predict(text[10001])\n",
     "Z = Z.reshape(xx.shape)\n",
     "plt.figure(figsize=(15, 5))\n",
     "plt.subplot(121)\n",
