--- a/storyFromPW.ipynb
+++ b/storyFromPW.ipynb
@@ -21,16 +21,7 @@
     "import openai"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DO NOT DELETE OPENAI KEY\n",
-    "# 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"
-   ]
-  },
+  
   {
    "cell_type": "code",
    "execution_count": 2,
@@ -40,7 +31,7 @@
     "from langchain.llms import OpenAI\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "llm = OpenAI(openai_api_key=\"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\")\n",
+    "llm = OpenAI(openai_api_key=\"")\n",
     "chat_model = ChatOpenAI(openai_api_key=\"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\")"
    ]
   },
