--- a/storyFromPW.ipynb
+++ b/storyFromPW.ipynb
@@ -21,7 +21,6 @@
     "import openai"
    ]
   },
-  
   {
    "cell_type": "code",
    "execution_count": 2,
@@ -32,7 +31,7 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = OpenAI(openai_api_key=\"")\n",
-    "chat_model = ChatOpenAI(openai_api_key=\"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\")"
+    "chat_model = ChatOpenAI(openai_api_key=\"")"
    ]
   },
   {
